--- a/src/i18n/locales/it/translation.json
+++ b/src/i18n/locales/it/translation.json
@@ -477,7 +477,7 @@
     }
   },
   "cheatsheet": {
-    "title": "Riassunto",
+    "title": "Introduzione",
     "description": "Segui i passaggi seguenti per aumentare la tua privacy finanziaria. Si consiglia di passare da <2>guadagnare come maker</2> a <6>inviare come taker</6> più volte. <10>Per saperne di più.</10>",
     "receive": {
       "title": "<0>Finanzia</0> il tuo portafoglio.",
